--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "vercel-ai-interview-app",
+  "name": "interview-app-realtime",
   "private": true,
-  "version": "1.4.0",
+  "version": "3.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "vercel-dev": "vercel dev"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@vercel/blob": "^0.27.0",
