--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@vercel/blob": "^0.27.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@sendgrid/mail": "^8.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
