--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "interview-app-realtime",
+  "name": "dads-interview-bot",
+  "version": "2.0.0",
   "private": true,
-  "version": "3.6.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "vite build"
   },
   "dependencies": {
-    "@vercel/blob": "^0.27.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@sendgrid/mail": "^8.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.4.8"
+    "vite": "^5.4.0"
   }
 }
