--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "dads-interview-bot",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "vercel-build": "vite build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@vercel/blob": "^0.22.0",
+    "@sendgrid/mail": "^8.1.0"
   },
   "devDependencies": {
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "@vitejs/plugin-react": "^4.3.1"
   }
 }
