--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dads-interview-bot",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -11,8 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@vercel/blob": "^0.22.0",
-    "@sendgrid/mail": "^8.1.0"
+    "@vercel/blob": "^0.22.0"
   },
   "devDependencies": {
     "vite": "^5.4.0",
