--- a/package.json
+++ b/package.json
@@ -1,20 +1,42 @@
 {
   "name": "dads-interview-bot",
-  "version": "3.10.0",
+  "version": "1.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "vitest run",
+    "test:ui": "playwright test"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@vercel/blob": "^0.22.0"
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "zustand": "4.5.4",
+    "xstate": "5.14.0",
+    "lucide-react": "0.460.0",
+    "clsx": "2.1.1",
+    "tailwindcss": "3.4.7",
+    "postcss": "8.4.41",
+    "autoprefixer": "10.4.20",
+    "@vercel/blob": "0.22.0",
+    "@vercel/postgres": "0.8.0",
+    "server-only": "0.0.1",
+    "zod": "3.23.8",
+    "resend": "3.3.0",
+    "openai": "4.58.1"
   },
   "devDependencies": {
-    "vite": "^5.4.0",
-    "@vitejs/plugin-react": "^4.3.1"
+    "@types/node": "20.11.30",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "typescript": "5.6.2",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
+    "prettier": "3.3.3",
+    "vitest": "1.6.0",
+    "@playwright/test": "1.46.1"
   }
 }
