--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,17 @@
       "@/lib/*": [
         "lib/*"
       ]
-    }
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
+    ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
   ],
