--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,6 @@
-{ "framework": "vite" }
+{
+  "version": 2,
+  "framework": "nextjs",
+  "buildCommand": "next build",
+  "outputDirectory": ".next"
+}
