--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "autoprefixer": "10.4.20",
     "@vercel/blob": "0.22.0",
     "resend": "3.3.0",
-    "openai": "4.58.1"
+    "openai": "4.58.1",
+    "@sendgrid/mail": "^7.7.0"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
