Document hosting migration choices and Netlify setup

--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
     "test:ui": "playwright test"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "@netlify/blobs": "^10.0.11",
+    "autoprefixer": "10.4.20",
+    "lucide-react": "0.460.0",
     "next": "14.2.5",
+    "openai": "4.58.1",
+    "postcss": "8.4.41",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zustand": "4.5.4",
-    "zod": "3.23.8",
-    "lucide-react": "0.460.0",
-    "tailwindcss": "3.4.7",
-    "postcss": "8.4.41",
-    "autoprefixer": "10.4.20",
-    "@vercel/blob": "0.22.0",
     "resend": "3.3.0",
-    "openai": "4.58.1",
-    "@sendgrid/mail": "^7.7.0"
+    "tailwindcss": "3.4.7",
+    "zod": "3.23.8",
+    "zustand": "4.5.4"
   },
   "devDependencies": {
+    "@playwright/test": "1.46.1",
     "@types/node": "20.11.30",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "typescript": "5.6.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "prettier": "3.3.3",
-    "vitest": "1.6.0",
-    "@playwright/test": "1.46.1"
+    "typescript": "5.6.2",
+    "vitest": "1.6.0"
   }
 }
