--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,14 @@
 [build]
-  command = "npm run build"
-  publish = ".next"
-  framework = "next"
+command = "npm run build"
+publish = ".next"
 
 [functions]
-  node_bundler = "esbuild"
+node_bundler = "esbuild"
+included_files = ["app/**", "lib/**"]
+external_node_modules = ["@netlify/blobs", "openai", "resend"]
 
 [[plugins]]
-  package = "@netlify/plugin-nextjs"
+package = "@netlify/plugin-nextjs"
 
 
   [build.environment]
