--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "type-check": "tsc --noEmit",
     "test": "vitest run",
     "test:ui": "playwright test",
-    "fallback:sync": "node scripts/extract-fallback-copy.mjs"
+    "fallback:sync": "node scripts/extract-fallback-copy.mjs",
+    "ci-check": "npm run lint && npm run type-check && npm run build"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
     "@netlify/blobs": "^10.0.11",
+    "@sendgrid/mail": "^7.7.0",
     "autoprefixer": "10.4.20",
     "lucide-react": "0.460.0",
     "next": "14.2.5",
@@ -27,7 +29,7 @@
     "zustand": "4.5.4"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.13.5",
+    "@netlify/plugin-nextjs": "^5.14.3",
     "@playwright/test": "1.46.1",
     "@types/node": "20.11.30",
     "@types/react": "18.3.3",
