--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,6 @@
 [build]
+command = "node scripts/embed-deploy-id.js && npm run build"
+publish = ".next"
 command = "npm run build"
 publish = ".next"
 
