--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@ publish = ".next"
 
 [functions]
 node_bundler = "esbuild"
-included_files = ["app/**", "lib/**"]
+included_files = [".next/deploy-id.json", "app/**", "lib/**"]
 external_node_modules = ["@netlify/blobs", "openai", "resend"]
 
 [[plugins]]
